===========================================================================
 This file describes changes in the IO package beginning from version 1.2:
===========================================================================

==========================
 Changes from 1.5 -> 1.6:
==========================

  - New binding IO_fcntl with corresponding constants in IO
    (this is necessary for switching a file descriptor to O_NONBLOCK)
  - In IO_WriteNonBlocking only try to send PIPE_BUF bytes instead
    of full buffer to avoid blocking (is this the solution?)
  - Functionality to pipe a string through an external command
    using I/O multiplexing
  - New client side HTTP protocol implementation
  - Use chapters in documentation
  - New functions IO_PipeThrough and IO_PipeThroughWithError to pipe
    a string through a process.


==========================
 Changes from 1.4 -> 1.5:
==========================

  - Big changes in the buffered I/O functionality to allow for non-blocking
    I/O with buffers. Documented all. This changed the interface to buffered
    I/O considerable!
  - Test code for buffered I/O.
  - Test code for pickling/unpickling.
  - Some small bug fixes of bugs found during development of test code.


==========================
 Changes from 1.3 -> 1.4:
==========================

  - moved real random sources from the orb package here
    adjust them to new library code
  - implement picklers/unpicklers for random sources


==========================
 Changes from 1.2 -> 1.3:
==========================

  - hint to load a package if there is no handler for magic during unpickling
  - follow Frank's suggestion to allow more than one package with a
    C-part to be linked to a statically compiled GAP, document this
  - release subversion revision 155 as Version 1.3

