@@ -2,6 +2,18 @@
  This file describes changes in the IO package beginning from version 1.2:
 ===========================================================================
 
+
+==========================
+ Changes from 1.6 -> 2.0:
+==========================
+
+  - See to SIGCHLD signal handler in Popen, Popen2, and Popen3
+  - WaitPid in PipeThrough*
+  - Loop around IO_select calls to ignore EINTR error
+  - Sort out __stack_chk_fail_local gcc 4.1 problem
+  - case insensitivity in header field names in HTTP protocol
+
+
 ==========================
  Changes from 1.5 -> 1.6:
 ==========================
